--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,1 @@
-!C:\xampp\htdocs\www\Antares_project\bsp
-!C:\xampp\htdocs\www\Antares_project\js
-!C:\xampp\htdocs\www\Antares_project\php
-!C:\xampp\htdocs\www\Antares_project\index.php
-!C:\xampp\htdocs\www\Antares_project\login.php
+!C:\xampp\htdocs\www\Antares_project\tablas\headings
