Commit from RaulSB07: actualizacion

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 !C:\xampp\htdocs\www\Antares_project\.git\objects\pack\pack-e708f03518caf2ff2c26a834998ad6725a0facb3.pack
 !C:\xampp\htdocs\www\Antares_project\.git\objects\pack\pack-e708f03518caf2ff2c26a834998ad6725a0facb3.pack
 !C:/xampp/htdocs/www/Antares_project\.git\objects\pack\pack-e708f03518caf2ff2c26a834998ad6725a0facb3.pack
+!C:/xampp/htdocs/www/Antares_project\.git\objects\pack\pack-e708f03518caf2ff2c26a834998ad6725a0facb3.pack
+!C:\xampp\htdocs\www\Antares_project\.git\objects\pack\pack-e708f03518caf2ff2c26a834998ad6725a0facb3.pack
